# a-test

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PRD.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TDD.md  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/a-test/: action.yml
.github/actions/a-test-android/: action.yml
.github/actions/a-test-browser/: action.yml
.github/actions/a-test-desktop/: action.yml
.github/actions/agentprobe-desktop/: action.yml
.github/workflows/: android-cua.yml  browser-cua.yml  cua-android-app.yml  cua-chrome-extension.yml  cua-chrome-sync-login-hcompany.yml  cua-chrome-sync-login.yml  cua-chrome-webapp.yml  cua-dual-surface.yml  external-consumer.yml  lint.yml  publish-pypi.yml
.tasks/5/: STATE.md  bug.md  design.md  plan.md  review.md  success.md  test-plan.md  test-report.md  validation.md  worklog.md
a_test/: __main__.py  actions.py  android.py  cli.py  grounding.py  grounding_a11y.py  judge.py  loop.py  prompts.py  pytest_plugin.py  recording.py
agentprobe/: cli.py
bench/: README.md  __init__.py  backends.yaml  report.py  run.py  test_bench.py
bench/cases/: chrome_navigate.py  settings_search.py
browser/: AGENTS.md  README.md  package.json  runner.ts
core/: vision.ts
docs/: VERSIONING.md  architecture.md  ci.md  quickstart.md  writing-cases.md
examples/: README.md
examples/android/: basic_smoke.py  calculator_math.py  network_drop.py  opencode_checks.py
examples/browser/: install_auth.py
examples/dual-surface/: chrome-sync-login.ts  terminal-and-browser.ts
examples/vibebrowser/: README.md  vibe-sidepanel-smoke.yaml
skills/: README.md
skills/a-test-ci/: SKILL.md
skills/a-test-video-github-upload/: SKILL.md
skills/write-cua-test/: SKILL.md
tests/: test_case_loading.py  test_grounding.py  test_judge.py  test_reasoning_captions.py
