[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "a-test"
dynamic = ["version"]
description = "Test Android apps and browser extensions with a computer-use agent"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Dzianis Vashchuk"}]
requires-python = ">=3.10"
dependencies = ["openai>=1.0", "pyyaml>=6.0"]

[project.optional-dependencies]
# YAML test cases. The browser backend (browser/) is a Bun/TypeScript runner,
# not a pip package — it runs from a repo checkout; see docs/quickstart.md.
yaml = ["pyyaml>=6.0"]
# GIF overlays: add text captions showing agent reasoning to demo GIFs
gif-captions = ["Pillow>=10.0"]

[project.scripts]
a-test = "a_test.cli:main"

[project.entry-points."pytest11"]
a_test = "a_test.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["a_test*"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
